--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,10 +40,10 @@ jobs:
         with:
           files: dist/*
 
-      - name: Upload to TestPyPI
-        uses: pypa/gh-action-pypi-publish@v1.4.1
-        with:
-          user: __token__
-          password: ${{ secrets.TESTPYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-          verbose: true
+      # - name: Upload to TestPyPI
+      #   uses: pypa/gh-action-pypi-publish@v1.4.1
+      #   with:
+      #     user: __token__
+      #     password: ${{ secrets.TESTPYPI_API_TOKEN }}
+      #     repository_url: https://test.pypi.org/legacy/
+      #     verbose: true
